--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,10 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  path_provider:
 
 dev_dependencies:
   flutter_test:
