--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: ext_storage
-description: A new flutter plugin project.
-version: 0.0.1
-author:
-homepage:
+description: ext_storage is minimal flutter plugin that provides external storage path and external public storage path.
+version: 1.0.0
+author: yasukotelin
+homepage: https://github.com/yasukotelin/ext_storage
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
