--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ext_storage
 description: ext_storage is minimal flutter plugin that provides external storage path and external public storage path.
 version: 1.0.0
-author: yasukotelin
+author: yasukotelin <yasukotelin@gmail.com>
 homepage: https://github.com/yasukotelin/ext_storage
 
 environment:
