--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 08 09:56:34 GMT+09:00 2019
-sdk.dir=C\:\\Users\\yasuhiro.kato\\AppData\\Local\\Android\\Sdk
+#Thu Feb 20 19:13:08 JST 2020
+sdk.dir=/Users/yasukotelin/Library/Android/sdk
